# libryzenadj-rs-new

./: .gitmodules  Cargo.toml  README.md
examples/: read.rs  set.rs
libryzenadj-sys/: .gitmodules  0001-RyzenAdj-cmake-static.patch  Cargo.toml  README.md  build.rs  wrapper.h
src/: lib.rs
