[package]
name = "libryzenadj"
version = "0.11.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libryzenadj-sys = { path = "libryzenadj-sys", version = "0.11.1"}
thiserror = "1.0.35"

errno = "0.2.8"

num_enum = "0.5.7"

[dev-dependencies]
num_cpus = "1.13.1"